tests/syntax_errors/missing_end.snl
program missingEnd
begin
    write(1)
.
